purification du code

--- a/public/index.html
+++ b/public/index.html
@@ -38,12 +38,19 @@
         <li><strong>Fin de partie :</strong> si un roi est capturé, la partie s'arrête sur une victoire, une défaite ou peut-être même une égalité. Les joueurs peuvent choisir de rester en spectateur ou de quitter la partie.</li>
       </ul>
       <p style="margin-top:8px;font-size:0.95em;color:#444">Remarque : ces règles couvrent uniquement les mécaniques des cartes — pour le jeu d'échecs standard, les mouvements habituels s'appliquent (pions, tours, cavaliers, fous, dames, rois).</p>
+      <h3>Modes de jeux</h3>
+      <p>Il existe plusieurs modes de jeux pour s'adapter à différents styles de jeu :</p>
+      <ul>
+        <li><strong>Pioche automatique :</strong> Si activé, les cartes sont piochées automatiquement à chaque tour. Sinon, les joueurs doivent décider s'ils piochent ou s'ils jouent. Attention ! Il n'est pas possible de piocher deux fois de suite !</li>
+        <li><strong>Sans remise :</strong> Les cartes jouées ne sont pas remises dans la pioche, ce qui les rend uniques.</li>
+        <li><strong>Pioche personnalisée :</strong> Choisissez les cartes disponibles dans la pioche.</li>
+      </ul>
     </section>
 
     <section class="card" id="availableCards" style="margin-top:16px">
       <h3>Cartes disponibles</h3>
       <div id="cardsGrid" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px;margin-top:12px">
-        <!-- cards will be injected here -->
+        <!-- Affichage des cartes disponibles -->
       </div>
     </section>
   </div>
