--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
   <div class="page">
     <header class="hero card">
       <div>
-        <div class="title">ChessNut — Salle d'attente</div>
-        <div class="subtitle">Préparez-vous, invitez un ami et lancez la partie quand tout le monde est prêt.</div>
+        <div class="title">ChessNut</div>
         <div style="margin-top:8px">
           <a href="https://github.com/Didictateur/ChessNut" target="_blank" rel="noopener noreferrer" class="btn-ghost" style="text-decoration:none;padding:6px 10px;font-size:0.95em;">Voir sur GitHub</a>
         </div>
@@ -19,7 +18,7 @@
 
     <section class="card lobby">
       <div>
-        <button id="create" class="btn-cta">Créer une room</button>
+        <button id="create" class="btn-cta">Créer une partie</button>
       </div>
 
       <div class="controls">
@@ -117,28 +116,28 @@
               const cid = (c.cardId || c.id || '').toString().toLowerCase();
               const title = (c.title || '').toString().toLowerCase();
               let imgSrc = null;
-              if(cid === 'adoubement' || title.indexOf('adoub') !== -1) imgSrc = '/assets/img/cards/adoubement.png';
-              if(cid === 'folie' || title.indexOf('folie') !== -1 || title.indexOf('fou') !== -1) imgSrc = '/assets/img/cards/folie.png';
-              if(cid === 'fortification' || title.indexOf('fortification') !== -1 || title.indexOf('fortif') !== -1) imgSrc = '/assets/img/cards/fortification.png';
-              if(cid === 'rebond' || title.indexOf('rebond') !== -1) imgSrc = '/assets/img/cards/rebond.png';
-              if(cid === 'anneau' || title.indexOf('anneau') !== -1) imgSrc = '/assets/img/cards/anneau.png';
-              if(cid === 'brouillard' || title.indexOf('brouillard') !== -1) imgSrc = '/assets/img/cards/brouillard.png';
-              if(cid === 'coin' || title.indexOf('coin') !== -1) imgSrc = '/assets/img/cards/coincoin.png';
-              if(cid === 'inversion' || title.indexOf('inversion') !== -1) imgSrc = '/assets/img/cards/inversion.png';
-              if(cid === 'invisible' || title.indexOf('invisible') !== -1) imgSrc = '/assets/img/cards/invisible.png';
-              if(cid === 'kamikaz' || title.indexOf('kamikaz') !== -1) imgSrc = '/assets/img/cards/kamikaz.png';
-              if(cid === 'melange' || title.indexOf('melange') !== -1 || title.indexOf('melange') !== -1) imgSrc = '/assets/img/cards/mélange.png';
-              if(cid === 'mine' || title.indexOf('mine') !== -1) imgSrc = '/assets/img/cards/mine.png';
-              if(cid === 'promotion' || title.indexOf('promotion') !== -1) imgSrc = '/assets/img/cards/promotion.png';
-              if(cid === 'resurection' || title.indexOf('resurection') !== -1 || title.indexOf('résurection') !== -1) imgSrc = '/assets/img/cards/resurection.png';
-              if(cid === 'sniper' || title.indexOf('sniper') !== -1) imgSrc = '/assets/img/cards/sniper.png';
-              if(cid === 'totem' || title.indexOf('totem') !== -1) imgSrc = '/assets/img/cards/totem.png';
-              if(cid === 'toucher' || title.indexOf('toucher') !== -1) imgSrc = '/assets/img/cards/toucher.png';
-              if(cid === 'vole' || title.indexOf('vole') !== -1 || title.indexOf('vole') !== -1) imgSrc = '/assets/img/cards/vole_piece.png';
-              if(cid === 'jouer_deux_fois' || title.indexOf('jouer deux fois') !== -1) imgSrc = '/assets/img/cards/double.png';
-              if(cid === 'empathie' || title.indexOf('empathie') !== -1) imgSrc = '/assets/img/cards/empathie.png';
-              if(cid === 'parrure' || title.indexOf('parrure') !== -1) imgSrc = '/assets/img/cards/parrure.png';
-              if(cid === 'révolution' || title.indexOf('révolution') !== -1 || title.indexOf('revolution') !== -1) imgSrc = '/assets/img/cards/révolution.png';
+              if(cid === 'adoubement') imgSrc = '/assets/img/cards/adoubement.png';
+              if(cid === 'folie') imgSrc = '/assets/img/cards/folie.png';
+              if(cid === 'fortification') imgSrc = '/assets/img/cards/fortification.png';
+              if(cid === 'rebond') imgSrc = '/assets/img/cards/rebond.png';
+              if(cid === 'anneau') imgSrc = '/assets/img/cards/anneau.png';
+              if(cid === 'brouillard') imgSrc = '/assets/img/cards/brouillard.png';
+              if(cid === 'coincoin') imgSrc = '/assets/img/cards/coincoin.png';
+              if(cid === 'inversion') imgSrc = '/assets/img/cards/inversion.png';
+              if(cid === 'invisible') imgSrc = '/assets/img/cards/invisible.png';
+              if(cid === 'kamikaze') imgSrc = '/assets/img/cards/kamikaz.png';
+              if(cid === 'melange') imgSrc = '/assets/img/cards/mélange.png';
+              if(cid === 'mine') imgSrc = '/assets/img/cards/mine.png';
+              if(cid === 'promotion') imgSrc = '/assets/img/cards/promotion.png';
+              if(cid === 'resurection') imgSrc = '/assets/img/cards/resurection.png';
+              if(cid === 'sniper') imgSrc = '/assets/img/cards/sniper.png';
+              if(cid === 'totem') imgSrc = '/assets/img/cards/totem.png';
+              if(cid === 'toucher') imgSrc = '/assets/img/cards/toucher.png';
+              if(cid === 'vole_piece') imgSrc = '/assets/img/cards/vole_piece.png';
+              if(cid === 'double') imgSrc = '/assets/img/cards/double.png';
+              if(cid === 'empathie') imgSrc = '/assets/img/cards/empathie.png';
+              if(cid === 'parrure') imgSrc = '/assets/img/cards/parrure.png';
+              if(cid === 'revolution') imgSrc = '/assets/img/cards/révolution.png';
               if(imgSrc){ const img = document.createElement('img'); img.src = imgSrc; img.alt = c.title || cid || 'card'; img.className = 'card-art-img'; img.style.width = '100%'; img.style.height = '100%'; img.style.objectFit = 'cover'; art.appendChild(img); }
             }catch(_){ }
             top.appendChild(art);
