--- a/public/game.html
+++ b/public/game.html
@@ -179,7 +179,7 @@
       if(id.indexOf('adoub') !== -1) return 'owned';
       if(id.indexOf('folie') !== -1) return 'owned';
       if(id.indexOf('fortification') !== -1) return 'owned';
-      if(id.indexOf('promotion') !== -1) return 'owned_pawn_then_enemy';
+  if(id.indexOf('promotion') !== -1) return 'owned_pawn';
       if(id.indexOf('vol_carte') !== -1) return 'player';
       if(id.indexOf('vole_piece') !== -1) return 'enemy';
       if(id.indexOf('coincoin') !== -1) return 'owned';
